substrate/frame/support/test/tests/pallet_ui/call_weight_inherited_invalid4.stderr
error[E0599]: no function or associated item named `foo` found for associated type `<T as parentheses::Config>::WeightInfo` in the current scope
  --> tests/pallet_ui/call_weight_inherited_invalid4.rs:38:24
   |
38 |     #[pallet::call(weight(<T as Config>::WeightInfo))]
   |                           ^ function or associated item not found in `<T as Config>::WeightInfo`

error[E0599]: no function or associated item named `foo` found for associated type `<T as assign::Config>::WeightInfo` in the current scope
  --> tests/pallet_ui/call_weight_inherited_invalid4.rs:59:26
   |
59 |     #[pallet::call(weight = <T as Config>::WeightInfo)]
   |                             ^ function or associated item not found in `<T as Config>::WeightInfo`
